updated frontend app

--- a/experiments/app-interface/v2/index.html
+++ b/experiments/app-interface/v2/index.html
@@ -67,7 +67,7 @@
                         <input class="form-control" type="text" placeholder="Title" id="title">
                     </div>
 
-                    <div class="form-row hide-when-running">
+                    <div class="form-row hide-when-running mb-3">
                          <div class="form-group col-md-6">
                             <label for="title" class="hide-when-running">Spreaker:</label>    
                             <div class="input-group">
@@ -93,7 +93,7 @@
                          </div>
                      </div>
 
-                    <label for="select1" class="hide-when-running">Audio device:</label>    
+                    <!-- <label for="select1" class="hide-when-running">Audio device:</label>    
                     <div class="input-group mb-4 hide-when-running">
                         <div class="input-group-prepend">
                             <span class="input-group-text">
@@ -108,15 +108,16 @@
                                 <i class="icon-refresh"></i>
                             </button>
                         </div>
-                    </div>
-                    <div class="text-center">
+                    </div> -->
+                    <div class="text-center hide-when-running">
                         <button class="btn btn-outline-danger btn-grace-large" type="button" id="startBtn" >
-                            <div class="remove-when-running">
                                 Start stream
-                            </div>
-                            <div class="add-when-running">
+                        </button>
+                    </div>
+                    
+                    <div class="text-center add-when-running">
+                        <button class="btn btn-outline-danger btn-grace-large mb-4" type="button" id="stopBtn" >
                                 Stop stream
-                            </div
                         </button>
                     </div>
                 </div>
@@ -192,11 +193,11 @@
     <script src="https://cdn.jsdelivr.net/npm/qrjs2@0.1.7/js/qrjs2.min.js"></script>
     <script type="text/javascript">
         // Temporary
-        document.getElementById('refreshBtn').addEventListener('click', () => {
-            document.getElementById('main').classList.add("invalid");
-            document.getElementById('main').classList.remove("running");
-            document.getElementById('main').classList.remove("settings");
-        });
+        // document.getElementById('refreshBtn').addEventListener('click', () => {
+        //     document.getElementById('main').classList.add("invalid");
+        //     document.getElementById('main').classList.remove("running");
+        //     document.getElementById('main').classList.remove("settings");
+        // });
 
         document.getElementById('startBtn').addEventListener('click', () => {
 
@@ -223,11 +224,11 @@
             document.getElementById('main').classList.remove("settings");
         });
 
-        // document.getElementById('stopBtn').addEventListener('click', () => {
-        //     document.getElementById('main').classList.remove("invalid");
-        //     document.getElementById('main').classList.remove("running");
-        //     document.getElementById('main').classList.remove("settings");
-        // });
+        document.getElementById('stopBtn').addEventListener('click', () => {
+            document.getElementById('main').classList.remove("invalid");
+            document.getElementById('main').classList.remove("running");
+            document.getElementById('main').classList.remove("settings");
+        });
 
         document.getElementById('settingsBtn').addEventListener('click', () => {
             document.getElementById('main').classList.remove("invalid");
