--- a/experiments/app-interface/v2/index.html
+++ b/experiments/app-interface/v2/index.html
@@ -81,7 +81,7 @@
                             <option value="32">32 kbit/s</option>
                             <option value="96">96 kbit/s</option>
                             <option value="128">128 kbit/s</option>
-                            <option value="192">192 kbit/s</option>
+                            <option value="192" selected>192 kbit/s</option>
                             <option value="256">256 kbit/s</option>
                             <option value="320">320 kbit/s</option>
                         </select>
@@ -89,13 +89,13 @@
                         <div class="form-row">
                             <div class="form-group col-md-8">
                                 <label for="webserver-host">Host</label>
-                                <div class="input-group">
+                                <div class="input-group" disabled>
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
                                             http://
                                         </span>
                                     </div>
-                                    <input class="form-control" type="text" placeholder="localhost" id="webserver-host">
+                                    <input class="form-control disabled-no-opacity" type="text" placeholder="localhost" id="webserver-host">
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
@@ -106,18 +106,18 @@
                                             :
                                         </span>
                                     </div>
-                                    <input class="form-control" type="number" placeholder="22" id="webserver-port">
+                                    <input class="form-control" type="number" placeholder="80" id="webserver-port">
                                 </div>
                             </div>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="webserver-ban-ip">
+                            <input class="form-check-input" type="checkbox" value="" id="webserver-ban-ip" checked>
                             <label class="form-check-label" for="webserver-ban-ip">
                                 Ban users who guesses urls.
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="webserver-local">
+                            <input class="form-check-input" type="checkbox" value="" id="webserver-local" checked>
                             <label class="form-check-label" for="webserver-local">
                                 Enable access from local network.
                             </label>
@@ -244,6 +244,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/qrjs2@0.1.7/js/qrjs2.min.js"></script>
+        <script src="assets/scripts/settings.js"></script>
         <script type="text/javascript">
         // Temporary
         document.getElementById('btn-audio-device-refresh').addEventListener('click', () => {
