--- a/experiments/app-interface/v2/index.html
+++ b/experiments/app-interface/v2/index.html
@@ -110,12 +110,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-check">
+                        <!-- <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="webserver-ban-ip" checked>
                             <label class="form-check-label" for="webserver-ban-ip">
                                 Ban users who guesses urls.
                             </label>
-                        </div>
+                        </div> -->
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="webserver-local" checked>
                             <label class="form-check-label" for="webserver-local">
