--- a/experiments/app-interface/v2/index.html
+++ b/experiments/app-interface/v2/index.html
@@ -48,14 +48,26 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="audio-channels">
-                            <label class="form-check-label" for="audio-channels">
-                                Manually map audio channels
-                            </label>
+                        <div class="form-row">
+                            <div class="form-group col-md-8">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="audio-channels">
+                                    <label class="form-check-label" for="audio-channels">
+                                        Map audio channels
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="audio-volume">
+                                    <label class="form-check-label" for="audio-volume">
+                                        Set volume
+                                    </label>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-4">
                                 <label for="audio-channels-left">Left:</label>
                                 <select class="form-control" id="audio-channels-left">
                                     <option>1</option>
@@ -65,7 +77,7 @@
                                     <option>5</option>
                                 </select>
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-4">
                                 <label for="audio-channels-right">Right:</label>
                                 <select class="form-control" id="audio-channels-right">
                                     <option>1</option>
@@ -74,6 +86,17 @@
                                     <option>4</option>
                                     <option>5</option>
                                 </select>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="audio-volume-val">Volume:</label>
+                                <div class="input-group">
+                                    <input class="form-control" type="number" placeholder="0" id="audio-volume-val">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">
+                                            dB
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <label for="audio-bitrate">Bitrate:</label>
@@ -116,12 +139,12 @@
                                 Ban users who guesses urls.
                             </label>
                         </div> -->
-                        <div class="form-check">
+                        <!-- <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="webserver-local" checked>
                             <label class="form-check-label" for="webserver-local">
                                 Enable access from local network.
                             </label>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="card">
