Added play button to share screen

--- a/experiments/site/index.html
+++ b/experiments/site/index.html
@@ -35,11 +35,9 @@
             <!-- Card image -->
             <div class="view">
               <div class="card-img-top"></div>
-              <!-- <img class="card-img-top" src="assets/images/card-origional.jpg" alt="Card image cap"> -->
-              <div class="mask color-overlay">
+              <div class="mask color-overlay cursor">
                 <i id="pButton" class="fas fa-play"></i>
               </div>
-            
             </div>
 
             <!-- Card content -->
