change set volume to increase volume

--- a/experiments/app-interface/v2/index.html
+++ b/experiments/app-interface/v2/index.html
@@ -61,7 +61,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="audio-volume">
                                     <label class="form-check-label" for="audio-volume">
-                                        Set volume
+                                        Increase volume
                                     </label>
                                 </div>
                             </div>
