--- a/experiments/app-interface/v2/index.html
+++ b/experiments/app-interface/v2/index.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-md-8">
+                            <div class="form-group col-sm-8">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="audio-channels">
                                     <label class="form-check-label" for="audio-channels">
@@ -57,7 +57,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-sm-4">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="audio-volume">
                                     <label class="form-check-label" for="audio-volume">
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-sm-4">
                                 <label for="audio-channels-left">Left:</label>
                                 <select class="form-control" id="audio-channels-left">
                                     <option>1</option>
@@ -77,7 +77,7 @@
                                     <option>5</option>
                                 </select>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-sm-4">
                                 <label for="audio-channels-right">Right:</label>
                                 <select class="form-control" id="audio-channels-right">
                                     <option>1</option>
@@ -87,7 +87,7 @@
                                     <option>5</option>
                                 </select>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-sm-4">
                                 <label for="audio-volume-val">Volume:</label>
                                 <div class="input-group">
                                     <input class="form-control" type="number" placeholder="0" id="audio-volume-val">
@@ -110,7 +110,7 @@
                         </select>
                         <h1>Webserver</h1>
                         <div class="form-row">
-                            <div class="form-group col-md-8">
+                            <div class="form-group col-sm-8">
                                 <label for="webserver-host">Host</label>
                                 <div class="input-group" disabled>
                                     <div class="input-group-prepend">
@@ -121,7 +121,7 @@
                                     <input class="form-control disabled-no-opacity" type="text" placeholder="localhost" id="webserver-host">
                                 </div>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-sm-4">
                                 <label for="webserver-port">Port</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -157,7 +157,7 @@
                             </label>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-md-5">
+                            <div class="form-group col-sm-5">
                                 <label for="proxy-user">Username</label>
                                 <div class="input-group">
                                     <input class="form-control" type="text" id="proxy-user">
@@ -168,11 +168,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-sm-4">
                                 <label for="proxy-host">Host</label>
                                 <input type="text" class="form-control" placeholder="portmap.io" id="proxy-host">
                             </div>
-                            <div class="form-group col-md-3">
+                            <div class="form-group col-sm-3">
                                 <label for="proxy-port">Port</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -189,13 +189,13 @@
                             <textarea class="form-control" id="proxy-key" placeholder="-----BEGIN RSA PRIVATE KEY-----&#10;XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&#10;XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&#10;XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&#10;XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&#10;XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&#10;XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&#10;----END RSA PRIVATE KEY-----" rows="8"></textarea>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 text-center">
+                            <div class="col-sm-6 text-center">
 
                                 <button class="btn btn-outline-secondary btn-grace-large" type="button" id="btn-cancel">
                                     Cancel
                                 </button>
                             </div>
-                            <div class="col-md-6 text-center">
+                            <div class="col-sm-6 text-center">
                                 <button class="btn btn-outline-danger btn-grace-large" type="button" id="btn-update">
                                     Update
                                 </button>
@@ -224,7 +224,7 @@
                             <input class="form-control" type="text" placeholder="Title" id="info-title">
                         </div>
                         <div class="form-row hide-when-running mb-3">
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-sm-6">
                                 <label for="info-speaker" class="hide-when-running">Spreaker:</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -235,7 +235,7 @@
                                     <input class="form-control" type="text" placeholder="Name" id="info-speaker">
                                 </div>
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-sm-6">
                                 <label for="info-text" class="hide-when-running">Bible verse:</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
