--- a/experiments/site/share.html
+++ b/experiments/site/share.html
@@ -41,10 +41,10 @@
             <!-- Card content -->
             <div class="card-body">
               <div class="row">
-                <div class="col-md-2 text-right p-0 my-auto">
+                <div class="col-sm-2 text-right p-0 my-auto">
                   <i id="pButton" class="fas fa-lg fa-play cursor"></i>
                 </div>
-                <div class="col-md-10 text-center">
+                <div class="col-sm-10 text-center">
                   <h5 class="sermon-title">
                     An interesting sermon title
                   </h5>
