put non-static content into api folder

--- a/experiments/site/index.html
+++ b/experiments/site/index.html
@@ -43,12 +43,8 @@
             <!-- Card content -->
             <div class="card-body text-center">
 
-              <h5 class="sermon-title">
-                An interesting sermon title
-              </h5>
-              <p class="mb-0 sermon-subtitle">
-                Andrew Haslam &middot; Psalm 151
-              </p>
+              <h5 class="sermon-title" id="title"></h5>
+              <p class="mb-0 sermon-subtitle" id="subtitle"></p>
 
               <audio id="music"></audio>
             </div>
@@ -63,6 +59,7 @@
   <!-- Full Page Intro -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script type="text/javascript" src="assets/scripts/audio-player.js"></script>
+  <script type="text/javascript" src="assets/scripts/load.js"></script>
 </body>
 
 </html>
