--- a/experiments/site/share.html
+++ b/experiments/site/share.html
@@ -45,12 +45,8 @@
                   <i id="pButton" class="fas fa-lg fa-play cursor"></i>
                 </div>
                 <div class="col-sm-10 text-center">
-                  <h5 class="sermon-title">
-                    An interesting sermon title
-                  </h5>
-                  <p class="mb-0 sermon-subtitle">
-                    Andrew Haslam &middot; Psalm 151
-                  </p>
+                  <h5 class="sermon-title" id="title"></h5>
+                  <p class="mb-0 sermon-subtitle" id="subtitle"></p>
                 </div>
               </div>
             </div>
@@ -68,6 +64,7 @@
   <script src="https://cdn.jsdelivr.net/npm/qrjs2@0.1.7/js/qrjs2.min.js"></script>
   <script type="text/javascript" src="assets/scripts/audio-player.js"></script>
   <script type="text/javascript" src="assets/scripts/share.js"></script>
+  <script type="text/javascript" src="assets/scripts/load.js"></script>
 </body>
 
 </html>
