Update logo to svg

--- a/experiments/app-interface/v3/index.html
+++ b/experiments/app-interface/v3/index.html
@@ -260,7 +260,7 @@
                 <div class="card text-white rhs">
                     <div class="mask"></div>
                     <div class="card-body" style="position: relative;">
-                        <img src="assets/images/logo.png" alt="Logo" class="logo" />
+                        <img src="assets/images/logo.svg" alt="Logo" class="logo" />
                         <p class='rhs-invalid-msg'>An error occurred. Check your credentials<br /> and your network connection.</p>
 
                         <div class="btn-group btn-type-qr" role="group">
