--- a/experiments/site/share.html
+++ b/experiments/site/share.html
@@ -27,7 +27,7 @@
 
         <div id="mobile-box">
 
-          <div class="my-4 h5 text-center"><img src="assets/images/logo.png" style="display: inline" width="320"></div>
+          <div class="my-5 h5 text-center"><img src="assets/images/logo.svg" style="display: inline" width="280"></div>
 
           <!-- Card -->
           <div class="card" style="background-color: #e0e0e0">
