--- a/experiments/site/share.html
+++ b/experiments/site/share.html
@@ -23,7 +23,7 @@
     <!-- Mask & flexbox options-->
     <div class="mask color-overlay align-items-center">
       <!-- Content -->
-      <div class="container d-flex justify-content-center my-4">
+      <div class="container d-flex justify-content-center">
 
         <div id="mobile-box">
 
