move audio channels from select to number field

--- a/experiments/app-interface/v3/index.html
+++ b/experiments/app-interface/v3/index.html
@@ -69,23 +69,11 @@
                         <div class="form-row">
                             <div class="form-group col-sm-4">
                                 <label for="audio-channels-left">Left:</label>
-                                <select class="form-control" id="audio-channels-left">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                </select>
+                                <input class="form-control" type="number" placeholder="0" id="audio-channels-left">
                             </div>
                             <div class="form-group col-sm-4">
                                 <label for="audio-channels-right">Right:</label>
-                                <select class="form-control" id="audio-channels-right">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                </select>
+                                <input class="form-control" type="number" placeholder="0" id="audio-channels-right">
                             </div>
                             <div class="form-group col-sm-4">
                                 <label for="audio-volume-val">Volume:</label>
