Fixed layout site for small screens

--- a/experiments/site/share.html
+++ b/experiments/site/share.html
@@ -21,14 +21,12 @@
   <!-- Full Page Intro -->
   <div class="view">
     <!-- Mask & flexbox options-->
-    <div class="mask color-overlay align-items-center">
+    <div class="mask color-overlay">
       <!-- Content -->
-      <div class="container d-flex justify-content-center">
+      <div class="my-container align-items-center">
 
+        <img class="logo" src="assets/images/logo.svg">
         <div id="mobile-box">
-
-          <div class="my-5 h5 text-center"><img src="assets/images/logo.svg" style="display: inline" width="280"></div>
-
           <!-- Card -->
           <div class="card" style="background-color: #e0e0e0">
 
@@ -53,6 +51,7 @@
           </div>
           <!-- Card -->
         </div>
+        <img class="logo hidden" src="assets/images/logo.svg">
       </div>
       <!-- Content -->
     </div>
